[gd_scene load_steps=7 format=3 uid="uid://c6pj57v4p2htv"]

[ext_resource type="PackedScene" path="res://scenes/audio/MusicPlayer.tscn" id="1"]
[ext_resource type="PackedScene" uid="uid://bbwtywufrhnfs" path="res://scenes/UI/AchievementPopupManager.tscn" id="2"]
[ext_resource type="Theme" uid="uid://biyfm0rxrcuru" path="res://assets/theme/MinimalUI/MinimalUI.tres" id="5"]
[ext_resource type="PackedScene" path="res://scenes/audio/ScarePlayer.tscn" id="10"]
[ext_resource type="PackedScene" uid="uid://ciksd20q8f3fh" path="res://scenes/UI/SettingsMenu.tscn" id="11"]
[ext_resource type="Script" path="res://scripts/MainMenu.gd" id="12"]

[node name="StartMenuV2" type="CanvasLayer"]

[node name="Menu" type="Control" parent="."]
show_behind_parent = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("5")
script = ExtResource("12")

[node name="CenterContainer" type="CenterContainer" parent="Menu"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/CenterContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="Menu/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "1000-Rooms"

[node name="MarginContainer" type="MarginContainer" parent="Menu/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="StartBtn" type="Button" parent="Menu/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="OptionsBtn" type="Button" parent="Menu/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="AchievementsBtn" type="Button" parent="Menu/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Secrets"

[node name="CreditsBtn" type="Button" parent="Menu/CenterContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "Credits"

[node name="QuitBtn" type="Button" parent="Menu/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="SettingsMenu" parent="Menu" instance=ExtResource("11")]
layout_mode = 1

[node name="ChangelogBtn" type="Button" parent="Menu"]
layout_mode = 0
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -193.0
offset_top = -59.0
text = "Changelog"

[node name="Changelog" type="Control" parent="Menu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Clickout" type="TextureButton" parent="Menu/Changelog"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Holder" type="Control" parent="Menu/Changelog"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -275.0
offset_right = 250.0
offset_bottom = 275.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Menu/Changelog/Holder"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -519.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.592157)

[node name="TabContainer" type="TabContainer" parent="Menu/Changelog/Holder"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="What\'s New" type="TabBar" parent="Menu/Changelog/Holder/TabContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Menu/Changelog/Holder/TabContainer/What\'s New"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/Changelog/Holder/TabContainer/What\'s New/MarginContainer"]
layout_mode = 2

[node name="Version" type="Label" parent="Menu/Changelog/Holder/TabContainer/What\'s New/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "Update 1.08"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Info" type="Label" parent="Menu/Changelog/Holder/TabContainer/What\'s New/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "- Ported game to new Engine (Godot 4.0).
- Numerous graphical optimizations and upgrades."

[node name="Upcoming" type="TabBar" parent="Menu/Changelog/Holder/TabContainer"]
visible = false
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Menu/Changelog/Holder/TabContainer/Upcoming"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/Changelog/Holder/TabContainer/Upcoming/MarginContainer"]
layout_mode = 2

[node name="Version" type="Label" parent="Menu/Changelog/Holder/TabContainer/Upcoming/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "Update 1.09"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Info" type="Label" parent="Menu/Changelog/Holder/TabContainer/Upcoming/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "- Yurr"

[node name="CloseBtn" type="Button" parent="Menu/Changelog/Holder"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -50.0
offset_bottom = 31.0
grow_horizontal = 0
text = "X"

[node name="FeedbackBtn" type="Button" parent="Menu"]
layout_mode = 0
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -48.0
offset_right = 183.0
text = "Feedback"

[node name="Timer" type="Timer" parent="Menu"]
wait_time = 0.99
one_shot = true

[node name="TitleText" type="Label" parent="Menu"]
layout_mode = 0
offset_left = 135.0
offset_top = 134.0
offset_right = 310.0
offset_bottom = 224.0
text = "Test Text??!?!?!"

[node name="ScarePlayer" parent="." instance=ExtResource("10")]
bus = &"SfxBus"

[node name="MusicPlayer" parent="." instance=ExtResource("1")]
process_mode = 0
bus = &"MusicBus"

[node name="AchievementPopupManager" parent="." instance=ExtResource("2")]
offset_bottom = -48.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="pressed" from="Menu/CenterContainer/VBoxContainer/StartBtn" to="Menu" method="_on_StartBtn_pressed"]
[connection signal="pressed" from="Menu/CenterContainer/VBoxContainer/OptionsBtn" to="Menu" method="_on_OptionsBtn_pressed"]
[connection signal="pressed" from="Menu/CenterContainer/VBoxContainer/AchievementsBtn" to="Menu" method="_on_AchievementsBtn_pressed"]
[connection signal="pressed" from="Menu/CenterContainer/VBoxContainer/CreditsBtn" to="Menu" method="_on_CreditsBtn_pressed"]
[connection signal="pressed" from="Menu/CenterContainer/VBoxContainer/QuitBtn" to="Menu" method="_on_quit_btn_pressed"]
[connection signal="pressed" from="Menu/ChangelogBtn" to="Menu" method="_on_changelog_btn_pressed"]
[connection signal="pressed" from="Menu/Changelog/Clickout" to="Menu" method="_on_clickout_pressed"]
[connection signal="pressed" from="Menu/Changelog/Holder/CloseBtn" to="Menu" method="_on_close_btn_pressed"]
[connection signal="pressed" from="Menu/FeedbackBtn" to="Menu" method="_on_FeedbackBtn_pressed"]
[connection signal="timeout" from="Menu/Timer" to="Menu" method="_on_Timer_timeout"]
